# autodiff

./: .clang-format  .gitignore  CMakeLists.txt  README.md
include/autodiff/: autodiff.h
tests/: simple_test.cpp  simple_test.h  simple_test_cg.cpp
